HEAD
	+ Set version to 8.0.0
	+ Update Bind9 configuration
	+ Add a new stub
	+ Remove old Systemd fix
	+ Update initial-setup and enable-module scripts
	+ Update DLZ file
	+ Add resolvconf dependency
	+ Added resolvconf service
	+ Update bind9.mas stub
	+ Remove unnecessary network restart
7.1.0
	+ Bump version number
7.0.2
	+ Fix DNSSEC
7.0.1
	+ Force to use ipv4 in nsupdate in order to prevent FORMERR
7.0.0
	+ Add db.root file by default
	+ Adapt to bind9 9.16.1
6.2.0
	+ Set version number to 6.2.0
6.1.2
	+ Fix NS updates. fix #1952
6.1.1
	+ Change allow_duplicated_ips to yes. fix #1920 
	+ Fix issue with semmantic versioning. fix #1925
6.1
	+ Use proper dlz library for bind9.11
	+ Remove duplicated vars from named.con.options.mas file
	+ Set version to 6.1
6.0
	+ Fix Mason template paths
5.1
	+ Update apparmor profile for Linux 4.13
	+ Avoid adding same IP addresses in different domains
5.0.3
	+ Wait for 30 seconds instead of 5 for named listening
	+ Make sure 127.0.0.1 is used as resolver when launching nsupdate
	+ Fix bind9-resolvconf regression in 16.04
5.0.2
	+ Fix nsupdate REFUSED errors with reverse zones
5.0.1
	+ Fix samba provision when netbios name and hostname are different
	+ Fix module restart in postinst
5.0
	+ DNS updates now done via GSS-TSIG no longer require custom samba patch
	+ Set version to 5.0
4.2.1
	+ Forbid use of loopback address as forwarder
4.2
	+ Adapt apparmor profiles for Samba 4.3
	+ Make service records accept '_' prefix in their names
4.1
	+ Remove external AD integration
4.0.2
	+ Escape TXT records in nsupdate commands
	+ Update managed domain ip addresses on static interfaces change
4.0.1
	+ Invalidate openchange VDomains model cache on added, modified and
	  deleted rows operation in DomainTable model
4.0
	+ Set version to 4.0
	+ Use refactored internalNetworks from network module
	+ Do not fail to add a host if an IP address is already used by
	  other hostname
	+ Return the identifier in EBox::DNS::addDomain method